<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hello World, HospitalFinderActivity!</string>
	<string name="app_name">Hospital Finder</string>
	<string name="nearby">Nearby</string>
	<string name="rating">Rating</string>
	<string name="map">Map</string>
	<string name="favorite">Favorite Hospitals</string>
	<string name="tap1">Set your favorite hospitals</string>
	<string name="tap2">Tap on a hospital and add as favorite</string>
	<string name="Restore">Restore Purchase</string>
	<string name="Upgreade">Upgrade to Ad-Free Hospital Finder</string>
	<string name="fqa">FAQ and CopyRight</string>
	<string name="fqaonly">FAQ</string>
	<string name="copyrightonly">CopyRight</string>
	<string name="loading">Loading...</string>
	<string name="feedback">Feedback</string>
	<string name="Restartyourdivise"><b>Restart your Devise.\n\n</b>
		A lot of problems can be easily resolved by simple restarting your
		iPhone or iPod touch.\n\n

		To restart iPhone,first turn iPhone off by pressing and holding the
		sleep/wake button until a red slider appears.\n\n Slide your finger
		across the slider and iPhone will turn off after a few moments.\n\n

		Next ,turn iPhone on by pressing and holding the sleep/wake button
		until the Apple logo appears.
	</string>
	<string name="redownloadapp">
		Re-download and Reinstall the Application.\n\n


		If restarting does not help, you may want to try re_downloading the
		application and installing it again.\n
	</string>
	<string name="condition">Condition: \n\n
		The above copyright notice and this permission notic shall be included in
		all copies or substantial portions of the software.\n

		THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,EXPRESS TO
		THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE
		AND MONINFRNGEMENT.\n IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
		HOLDERS BE LIABLE FOR ANY CLAIM,WHETHER IN AN ACTION OF CONTRACT, TORT
		OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTRWARE
		OR THE USE OR OTHER DEALINGS IN THE SOFTEARE.\n

		the protobuf-c libraryEncoding.c file are licensed as follows:
	</string>
	<string name="Probably_or_definitely_not">Probably or definitely not</string>
	<string name="Definitely_recommend">Definitely recommend</string>
	<string name="mapapikey">0GSbePbZsrzJinbQzG7coiu5j_4ehLpzV6vQ27g</string>
	<string name="hospitals">Hospitals</string>
	<string name="hospitalinfo">Hospital Info</string>
	<string name="phone">phone</string>
	<string name="homepage">homepage</string>
	<string name="address">address</string>
	<string name="directionstohere">Directions To Here</string>
	<string name="howpatientsrated">How patients rated the hospital overall :</string>
	<string name="patientsrecommend">Whether patients would recommend the hospital to friends and family:</string>
	<string name="highestorveryhigh">Highest or very high</string>
	<string name="low">low</string>
	<string name="definitely">Definitely</string>
	<string name="probablynot">Probably or definitely not</string>
	<string name="seecomplete">See complete</string>
	<string name="hidecomplete">Hide complete</string>
	<string name="pssr">patient satisfaction survey results</string>
	<string name="hownurses">How nurses communicated with the patients:</string>
	<string name="always">Always</string>
	<string name="sometimesornever">Sometimes or never</string>
	<string name="howdoctors">How doctors communicated with the patients:</string>
	<string name="howhelp">How patients received help as soon as they wanted:</string>
	<string name="howwellcontrolled">Whether the patients pain was well controlled:</string>
	<string name="howmedicines">Whether patients were explained about medicines before giving it to them:</string>
	<string name="howrecovery">Whether patients were given information about what to do during their recovery at home:</string>
	<string name="howbathrooms">Were the rooms and bathrooms clean:</string>
	<string name="howquiet">Whether area around the patients room was quiet at night:</string>
	<string name="completedsurveys">Completed Surveys</string>
	<string name="surveyresponserate">Survey response rate</string>
	<string name="settings">Settings</string>
	<string name="copyright">Copyright</string>
	<string name="faq">FAQ</string>
	<string name="clear">Clear</string>
	<string name="cancel">Cancel</string>
	<string name="location">Location</string>
	<string name="done">Done</string>
	<string name="notnow">Not now</string>
	<string name="upgrade">Upgrade for $0.99</string>
	<string name="upgradeto">Upgrade to\nAd-Free Hospital Finder</string>
	<string name="getrid">Get rid of ads and support the development of cool new features</string>
	<string name="city">City</string>
	<string name="zipcode">Zipcode</string>
	<string name="distance">Distance(mi)</string>
	<string name="enterCity">Enter City</string>
	<string name="enterZipcode">Enter Zipcode</string>
	<string name="enterDistance">Enter Distance(miles)</string>
	<string name="changeSettings">Change the default settings</string>
	<string name="pleaseenter">Please enter city, zipcode and distance.</string>
	<string name="back">Back</string>
	<string name="locationsettings">Location Settings</string>
	<string name="searchdistance">Search Distance</string>
	<string name="miles">Miles</string>
	<string name="locationpickup">Pick A Location</string>
	<string name="favoriteshospitals">Favorite Hospitals</string>
	<string name="byrating">By rating</string>
	 <string-array name="groups">
        <item>Favorite Hospitals</item>
        <item>Within 1 mile</item>
        <item>Within 3 mile</item>
        <item>Within 5 mile</item>
        <item>Within 10 mile</item>
        <item>Within 15 mile</item>
        <item>Within 20 mile</item>
        <item>Within 40 mile</item>
        <item>Within 60 mile</item>
        <item>Within 80 mile</item>
        <item>Within 100 mile</item>
        <item>Within 200 mile</item>
    </string-array>
</resources>





