<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#ECECEC" android:orientation="vertical">

	<RelativeLayout android:id="@+id/top"
		android:layout_width="fill_parent" android:layout_height="44dp"
		android:background="@drawable/bluetopbck">

		<TextView android:id="@+id/addtxt" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:layout_marginTop="10dip" android:ellipsize="end"
			android:gravity="center" android:text="@string/settings"
			android:textColor="#FFFFFF" android:textSize="18sp"
			android:textStyle="bold">
		</TextView>

		<Button android:id="@+id/donebtn" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignParentRight="true"
			android:layout_marginRight="10dp" android:background="@drawable/bluebtn"
			android:text="@string/done" android:textColor="#FFFFFF"
			android:layout_centerVertical="true" android:textStyle="bold" />
	</RelativeLayout>

	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_margin="10dp"
				android:background="@drawable/listwhitebck" android:orientation="vertical">

				<TextView android:id="@+id/upgred" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_marginBottom="9dp"
					android:gravity="left" android:text="@string/Upgreade"
					android:textColor="#000000" android:textSize="14sp"
					android:textStyle="bold" />

				<View android:layout_width="fill_parent" android:layout_height="1dp"
					android:background="#CCCCCC">
				</View>

				<TextView android:id="@+id/restor" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_marginTop="9dp"
					android:gravity="left" android:text="@string/Restore"
					android:textColor="#000000" android:textSize="14sp"
					android:textStyle="bold" />
			</LinearLayout>

			<TextView android:id="@+id/textView2" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="20dp"
				android:layout_marginTop="5dp" android:text="@string/fqa"
				android:textColor="#2B3856" android:layout_marginRight="10dp"
				android:textStyle="bold" />

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_margin="10dp"
				android:background="@drawable/listwhitebck" android:orientation="vertical">

				<TextView android:id="@+id/faq" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_marginBottom="5dp"
					android:drawableRight="@drawable/greyarrow" android:gravity="left"
					android:text="@string/fqaonly" android:textColor="#000000"
					android:textSize="14sp" android:textStyle="bold" />

				<View android:layout_width="fill_parent" android:layout_height="1dp"
					android:background="#CCCCCC">
				</View>

				<TextView android:id="@+id/copyrigt" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_marginTop="5dp"
					android:drawableRight="@drawable/greyarrow" android:gravity="left"
					android:text="@string/copyrightonly" android:textColor="#000000"
					android:textSize="14sp" android:textStyle="bold" />
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_margin="10dp"
				android:background="@drawable/listwhitebck" android:orientation="vertical">

				<TextView android:id="@+id/feedback" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:drawableRight="@drawable/greyarrow"
					android:gravity="left" android:text="@string/feedback"
					android:textColor="#000000" android:textSize="14sp"
					android:textStyle="bold" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

</LinearLayout>