<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#ECECEC" android:orientation="vertical">

	<RelativeLayout android:id="@+id/top"
		android:layout_width="fill_parent" android:layout_height="44dp"
		android:background="@drawable/bluetopbck">

		<TextView android:id="@+id/addtxt" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:layout_marginTop="10dip" android:ellipsize="end"
			android:gravity="center" android:text="@string/locationsettings"
			android:textColor="#FFFFFF" android:textSize="18sp"
			android:textStyle="bold">
		</TextView>

		<Button android:id="@+id/back" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
			android:layout_marginLeft="10dp" android:background="@drawable/ibp"
			android:text="@string/back" android:textColor="#FFFFFF"
			android:paddingLeft="3dp" android:layout_centerVertical="true"
			android:textStyle="bold" />
	</RelativeLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_margin="10dp"
		android:background="@drawable/listwhitebck" android:orientation="vertical">

		<RelativeLayout android:id="@+id/location"
			android:layout_marginBottom="5dp" android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView android:id="@+id/llabel" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:text="@string/location" android:layout_alignParentLeft="true"
				android:textColor="#000000" android:textSize="14sp"
				android:textStyle="bold" />
			<TextView android:id="@+id/locationtxt" android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:layout_toLeftOf="@+id/greyicon2"
				android:layout_centerVertical="true" android:gravity="right" android:layout_marginRight="20dp"
				android:text="@string/location" android:layout_toRightOf="@+id/llabel"
				android:textColor="#C0C0C0" android:textSize="14sp"
				android:textStyle="bold" />
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true" android:layout_marginTop="4dip"
				android:id="@+id/greyicon2" android:src="@drawable/grey_icon" />
		</RelativeLayout>

		<View android:layout_width="fill_parent" android:layout_height="1dp"
			android:background="#CCCCCC">
		</View>

		<RelativeLayout android:id="@+id/distance"
			android:layout_marginTop="5dp" android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView android:id="@+id/llabel1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:text="@string/searchdistance"
				android:layout_alignParentLeft="true" android:textColor="#000000"
				android:textSize="14sp" android:textStyle="bold" />
			<TextView android:id="@+id/searchdistancetxt" android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true" android:gravity="right"
				android:text="@string/searchdistance" android:layout_toRightOf="@+id/llabel1"
				android:textColor="#C0C0C0" android:textSize="14sp" android:layout_marginRight="20dp"
				android:textStyle="bold" />
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:layout_toLeftOf="@+id/searchdistancetxt"
				android:layout_centerVertical="true" android:layout_marginTop="4dip"
				android:id="@+id/greyicon1" android:src="@drawable/grey_icon" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>